objects/ssot__PaymentCard__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BankIdentificationNumber__c</fullName>
        <label>Bank Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToCity__c</fullName>
        <label>Bill to City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToCountryID__c</fullName>
        <label>Bill to Country Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToFirstName__c</fullName>
        <label>Bill to First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToLastName__c</fullName>
        <label>Bill to Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToPostalCode__c</fullName>
        <label>Bill to Postal Code Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToStateProvinceId__c</fullName>
        <label>Bill to State Province Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToStreet2__c</fullName>
        <label>Bill to Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToStreet__c</fullName>
        <label>Bill to Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CardHolderName__c</fullName>
        <label>Card Holder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CardOwnershipType__c</fullName>
        <label>Card Ownership Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CardToken__c</fullName>
        <label>Card Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreditCardExpired__c</fullName>
        <label>Credit Card Expired</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DerivedCardTypeCode__c</fullName>
        <label>Derived Card Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationMonth__c</fullName>
        <label>Expiration Month</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationYear__c</fullName>
        <label>Expiration Year</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Payment Card Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssueNumber__c</fullName>
        <label>Issue Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaskedNumber__c</fullName>
        <label>Masked Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Payment Card Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumberLastDigits__c</fullName>
        <label>Number Last Digits</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentCardType__c</fullName>
        <label>Payment Card Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214390_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentCard_BillToStateProvinceId_ma_rel</label>
        <referenceTo>ssot__StateProvince__dlm</referenceTo>
        <relationshipLabel>PaymentCard_BillToStateProvinceId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761214390_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>